Fix post card list layout issue in Safari for iPad

--- a/sass/components/_post_card.scss
+++ b/sass/components/_post_card.scss
@@ -318,8 +318,15 @@ $post-card-border-color: $border-color--darker;
   display: flex;
   flex-wrap: wrap;
 
+  // Safari (iPad)
+  display: -webkit-flex;
+  -webkit-flex-wrap: wrap;
+
   .post-card-wrap {
     display: flex;
+
+    // Safari (iPad)
+    display: -webkit-flex;
   }
 
   .post-card {
